test/functions/bradc/useBeforeDef/useBeforeDef2.good
useBeforeDef2.chpl:1: In function 'foo':
useBeforeDef2.chpl:1: error: 'y' used before defined (first used here)
